--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,10 @@ target 'Mujeres' do
   )
 
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'MujeresTests' do
     inherit! :complete
     # Pods for testing
