--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "module": "^1.2.5",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0"
