--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-camera": "^4.1.1",
+    "react-native-file-access": "^2.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.3.0",
