--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+      <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyCZVmdkTW59CHpL1EeO2w1XZwUeaM6V0hM"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -28,5 +33,6 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 </manifest>
