--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "react-native-animatable": "^1.3.3",
     "react-native-camera": "^4.1.1",
     "react-native-file-access": "^2.0.0",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-location": "^2.5.0",
+    "react-native-maps": "^0.29.3",
     "react-native-paper": "^4.9.2",
+    "react-native-permissions": "^3.0.5",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0",
     "react-native-vector-icons": "^8.1.0"
